namespace AutoParts_ShopAndForum.Core.Models
{
    public class ProductCategoryModel
    {
        public int Id { get; set; }

        public string ImageUrl { get; set; }

        public string Name { get; set; }
    }
}
